--- a/.github/workflows/greenhub.yml
+++ b/.github/workflows/greenhub.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           force: true
           directory: "."
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN_GITHUB }}
