Fix GitHub Actions workflow syntax and update token reference
Change-Id: I7fe374e52a2606c2b2e48ff7386ab06bab6687be
Signed-off-by: Nitesh <niteshraj231@outlook.com>

--- a/.github/workflows/greenhub.yml
+++ b/.github/workflows/greenhub.yml
@@ -2,9 +2,8 @@ name: Commit cheat
 
 on:
   workflow_dispatch:
-
   schedule:
-  - cron: "0 */5 * * *"
+    - cron: "0 */5 * * *"
 
 jobs:
   auto_commit:
@@ -12,9 +11,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-          fetch-depth: 0
+        with: { persist-credentials: false, fetch-depth: 0 }
 
       - name: Modify README.md
         run: |
@@ -41,5 +38,4 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           force: true
-          directory: "."
-          github_token: ${{ secrets.TOKEN_GITHUB }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
